--- a/assets/css/components/list/_settings.scss
+++ b/assets/css/components/list/_settings.scss
@@ -19,7 +19,7 @@ $list-timeline-last-of-type-height: 100%;
 $list-timeline-li-before-border-width: 2px;
 $list-timeline-li-before-height: 1rem;
 $list-timeline-li-before-left: 2.6rem;
-$list-timeline-li-before-top: .7rem;
+$list-timeline-li-before-top: 1.1rem;
 $list-timeline-li-before-width: 1rem;
 $list-timeline-li-first-child-border-radius: .4rem;
 $list-timeline-li-first-child-margin-bottom: 2rem;
