--- a/assets/css/components/post-teaser/_default.scss
+++ b/assets/css/components/post-teaser/_default.scss
@@ -6,10 +6,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0 auto var(--spacing3);
+    margin: 0 auto var(--contentGutterVertical);
     width: 100%;
 
-    &__heading {
+    > .post-teaser__heading {
         margin-bottom: 0;
     }
 
